homework1/k8s/manifest.yml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: otus
# ---
apiVersion: v1
kind: Service
metadata:
  name: application-service
  # namespace: otus
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8000
  selector:
    app: otus-homework
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: application-deployment
  # namespace: otus
  labels:
    app: application-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: otus-homework
  template:
    metadata:
      labels:
        app: otus-homework
    spec:
      containers:
        - image: dataceton/otus-homework:1.0
          name: otus-homework
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-ingress
  # namespace: otus
  annotations:
    kubernetes.io/ingress.class: nginx

spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: application-service
                port:
                  number: 80
